# fheroes2enh

./: CMakeLists.txt
src/engine/: system.cpp
src/fheroes2/system/: settings.cpp
